[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-env"
version = "1.0.0"
description = "LangGraph-powered OpenEnv for Hallucination Evaluation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "pydantic",
    "openai",
    "wikipedia",
    "arxiv",
    "fastapi",
    "uvicorn"
]