[project]
name = "hallucination-openenv"
version = "0.1.0"
description = "OpenEnv hallucination evaluation environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "pydantic",
    "wikipedia",
    "arxiv",
    "tiktoken",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
py-modules = ["app", "env", "inference"]
